RESOLVED FIXED67779
HiDPI: WebKit2's drag images are blurry
https://bugs.webkit.org/show_bug.cgi?id=67779
Summary HiDPI: WebKit2's drag images are blurry
Adam Roben (:aroben)
Reported 2011-09-08 07:13:17 PDT
To reproduce: 1. On a display with a >1.0 scale factor, go to http://www.webkit.org/ 2. Drag a link The drag image is blurry.
Attachments
Patch (3.35 KB, patch)
2012-02-09 10:09 PST, Matthew Delaney
no flags
Patch (1.26 KB, patch)
2012-02-09 16:14 PST, Matthew Delaney
bdakin: review+
Adam Roben (:aroben)
Comment 1 2011-09-08 07:13:54 PDT
This affects both WebKit1 and WebKit2. WebKit2 will probably need more fixes, though, since the drag image has to be shipped over to the UI process before it's displayed.
Radar WebKit Bug Importer
Comment 2 2011-09-08 07:14:09 PDT
Adam Roben (:aroben)
Comment 3 2011-09-08 14:16:17 PDT
WebKit1's behavior is somewhat different, so it is now covered by bug 67802.
Matthew Delaney
Comment 4 2012-02-09 10:09:16 PST
Matthew Delaney
Comment 5 2012-02-09 11:35:23 PST
Adam Roben (:aroben)
Comment 6 2012-02-09 14:39:39 PST
Comment on attachment 126322 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=126322&action=review > Source/WebKit2/UIProcess/API/mac/WKView.mm:2566 > + IntSize size([image size]); > + size.scale(1.0 / [self _intrinsicDeviceScaleFactor]); > + [image setSize:size]; I think you should be using WebPageProxy::deviceScaleFactor instead of -[WKView _intrinsicDeviceScaleFactor]. Otherwise you'll get incorrect behavior when WKPageSetCustomDeviceScaleFactor has been called.
Matthew Delaney
Comment 7 2012-02-09 16:08:25 PST
Reopening to add in Adam's suggestion.
Matthew Delaney
Comment 8 2012-02-09 16:14:14 PST
Matthew Delaney
Comment 9 2012-02-09 16:36:16 PST
Note You need to log in before you can comment on or make changes to this bug.