HiDPI: WebKit2's link-dragging images are blurry https://bugs.webkit.org/show_bug.cgi?id=67779

Reviewed by Beth Dakin.

Teach startDrag about the deviceScaleFactor so that it creates
an appropriately scaled bitmap image to ship over.
* WebProcess/WebCoreSupport/mac/WebDragClientMac.mm:
(WebKit::WebDragClient::startDrag):
(WebKit::convertImageToBitmap):

Have setDragImage assume that it's receiving a bitmap image scaled
up by the deviceScaleFactor that it sees.
* UIProcess/API/mac/WKView.mm:
(-[WKView _setDragImage:at:linkDrag:]):


git-svn-id: svn://svn.chromium.org/blink/trunk@107267 bbb929c8-8fbe-4397-9dbb-9b2b20218538